charts/workflows/test-policy/argo-workflow/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: argo-workflow
spec:
  namespaceTemplate:
    metadata:
      labels:
        app.kubernetes.io/managed-by: sessionspaces
  steps:
    - try:
        - apply:
            resource:
              apiVersion: v1
              kind: ConfigMap
              metadata:
                name: sessionspaces
                labels:
                  app.kubernetes.io/managed-by: sessionspaces
              data:
                members: '["member1", "member2"]'
        - sleep:
            duration: 10s
        - assert:
            resource:
              apiVersion: v1
              kind: ServiceAccount
              metadata:
                name: argo-workflow
        - assert:
            resource:
              apiVersion: rbac.authorization.k8s.io/v1
              kind: RoleBinding
              metadata:
                name: argo-workflow
